# ohNdkCamera

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5  syscap.json
entry/src/main/cpp/: CMakeLists.txt  camera_manager.cpp  camera_manager.h  main.cpp  napi_init.cpp  opengl_manager.cpp  opengl_manager.h  video_codec.cpp  video_codec.h
entry/src/main/cpp/camera/: camera_manager.cpp  camera_manager.h
entry/src/main/cpp/gl/: EGLHelper.h  GLManager.cpp  GLManager.h  GLRenderer.cpp
entry/src/main/cpp/opengl/: EGLHelper.cpp  EGLHelper.h  GLRenderer.cpp  GLRenderer.h  OpenGLManager.cpp  OpenGLManager.h
entry/src/main/cpp/types/libentry/: index.d.ts
entry/src/main/cpp/util/: DebugLog.h
entry/src/main/cpp/video/: encoded_data_queue.cpp  encoded_data_queue.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
entry/src/main/ets/pages/: Index.ets
